--- a/src/app/layouts/aside/aside.component.html
+++ b/src/app/layouts/aside/aside.component.html
@@ -2,30 +2,30 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link active" routerLink="/">
               <span data-feather="home"></span>
-              Dashboard <span class="sr-only">(current)</span>
+              Home
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="/product">
               <span data-feather="file"></span>
-              Orders
+              Product
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="/student">
               <span data-feather="shopping-cart"></span>
-              Products
+              Student
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="register">
               <span data-feather="users"></span>
-              Customers
+              Register
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="bar-chart-2"></span>
               Reports
@@ -69,6 +69,6 @@
               <span data-feather="file-text"></span>
               Year-end sale
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
