--- a/src/app/layouts/layout/layout.component.html
+++ b/src/app/layouts/layout/layout.component.html
@@ -2,9 +2,13 @@
 <app-header ></app-header>
   <div class="container-fluid">
     <div style="display: flex;
-      margin-top: 40px;
+      padding-top: 40px;
     ">
-    <app-aside style="background-color: aqua;"></app-aside>
+    <app-aside style="background-color: aqua;
+      width: 280px;
+      height: 100vh;
+      margin-right: 50px;
+    "></app-aside>
     <router-outlet ></router-outlet>
     </div>
   </div>
