--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,33 +5,31 @@
     <label for="userName">User Name</label>
     <input class="form-control" type="text" name="" formControlName="userName" id="userName">
   </div>
-  <div class="text-danger" *ngIf="registerForm.get('userName')?.dirty">
+  <app-show-validate
+    [formField] = "registerForm.get('userName')"
+    key = "User name"
+  ></app-show-validate>
+
+  <!-- <div class="text-danger" *ngIf="registerForm.get('userName')?.dirty">
     <p *ngIf="registerForm.get('userName')?.errors?.['required']">
       userName không được trống
     </p>
-    <p *ngIf="registerForm.get('userName')?.errors?.['minlength']">
-      userName từ 6 kí tự
-    </p>
-  </div>
+  </div> -->
   <div class="form-group">
     <label for="email">email</label>
     <input class="form-control" type="email" name="" formControlName="email" id="email">
   </div>
-  <div class="text-danger" *ngIf="registerForm.get('email')?.dirty">
-    <p *ngIf="registerForm.get('email')?.errors?.['required']">
-      Email không được trống
-    </p><p *ngIf="registerForm.get('email')?.errors?.['email']">
-      Email phải đúng định dạng
-    </p>
-  </div>
+  <app-show-validate
+    [formField] = "registerForm.get('email')"
+    key = "Email"
+  ></app-show-validate>
   <div class="form-group">
     <label for="password">password</label>
     <input class="form-control" type="password" name="" formControlName="password" id="password">
   </div>
-  <div class="text-danger" *ngIf="registerForm.get('password')?.dirty">
-    <p *ngIf="registerForm.get('password')?.errors?.['required']">
-      Password không được trống
-    </p>
-  </div>
+  <app-show-validate
+    [formField] = "registerForm.get('password')"
+    key = "Password"
+  ></app-show-validate>
   <button class="btn btn-success">Register</button>
 </form>
