--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -47,14 +47,27 @@
           <td>Ten SP</td>
           <td>Gia SP</td>
           <td>Mo ta SP</td>
+          <td>Trang thai</td>
           <td>Hanh dong</td>
         </tr></thead>
         <tbody>
           <tr *ngFor="let product of products">
             <td>{{product.id}}</td>
-            <td>{{product.name}}</td>
+            <td>
+              <app-show-product-name
+              [productName]= 'product.name'
+            ></app-show-product-name>
+            </td>
+
+            <!-- <td>{{product.name}}</td> -->
             <td>{{product.price}}</td>
             <td>{{product.desc}}</td>
+            <td>
+              <app-status
+                [status] = 'product.status'
+                (changeStatus)="parebtChangeStatus($event, product.id)"
+              ></app-status>
+            </td>
             <td>
               <a [routerLink]="['/product', product.id]">
                 <button class="btn btn-primary">Xem chi tiet</button>
